--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,6 @@
 
 	<body>
 		<div id="app"></div>
-		<script type="module" src="./index.js"></script>
+		<script type="module" src="./index.ts"></script>
 	</body>
 </html>
